--- a/Teste/index.css
+++ b/Teste/index.css
@@ -1,5 +1,5 @@
-style{
-    color:orange;
-    font-size: 20px;    
-    text-align: center;
+h1 {
+color:red;
+font-size:20px;
+text-aling:center;
 }
